[package]
name = "lol"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization, but slower build
debug = true        # Symbols are nice for debugging

[profile.dev]
opt-level = 1       # Minimal optimization for debugging

[[bin]]
name = "stm32f446_led"
path = "src/main.rs"
test = false
bench = false

